# rustypl8s

./: .gitignore  compile_android.sh  generate-apk.sh  gradle.properties  settings.gradle.kts  shell.nix  walkthrough.artifact.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/rustypl8s/: MainActivity.kt  MainApplication.kt  Models.kt
app/src/main/java/com/example/rustypl8s/data/: WorkoutRepository.kt
app/src/main/java/com/example/rustypl8s/ui/: Navigation.kt
app/src/main/java/com/example/rustypl8s/ui/components/: Shimmer.kt  WorkoutComponents.kt
app/src/main/java/com/example/rustypl8s/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/rustypl8s/ui/workout/: WorkoutScreen.kt  WorkoutViewModel.kt
app/src/main/java/com/example/rustypl8s/uniffi/rustypl8s_core/: rustypl8s_core.kt
core/: Cargo.toml
core/src/: db.rs  domain.rs  lib.rs
