[package]
name = "rustypl8s-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Identifiers
uuid = { version = "1.0", features = ["serde", "v4"] }

# Database
rusqlite = { version = "0.31", features = ["bundled", "uuid"] }

# FFI
uniffi = { version = "0.28", features = ["tokio", "cli"] }
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
